# llm-latent-drift

./: .coverage  .gitignore  Dockerfile  README.md  calibration_results_gemma_40_fixed_dataloader.json  calibration_results_llama_3_1_8b_fixed_dataloader.json  calibration_results_mps.json  calibration_results_mps_gemma_4b_200.json  pyproject.toml  requirements.txt  sample_cli_usage.sh
.cursor/plans/: driftguard_drift_pipeline_2763f100.plan.md
.hypothesis/constants/: 18ff205188f4220b  249acc7d7b1d23c3  29e216743add26eb  2be6b2d9910ecfdb  2d673a09957376d2  2dbc4f65308c6ba1  3c83e4b0a553a20f  3e7874dd7b04716d  4287b9487070efb0  526b00d6f4187184  5ba60f2ba8ef4f70  5c75176a3faf1d9d  5cb1263b4eb516ee  61f91ce3c19d1c96  6f3eb71589ea86a5  77c61aa1a909b37f  80bee5de2e1871ef  8808d34b86cfd629  8e17b453624f724f  8f7ed07c914dde98  91dd4a300bb142e0  92d458dae211746d  9c18dd855441a8d4  a44b6652a30cfe57  a63f18bebec84bd5  a64ad96cac4e70a5  b12332a5cca6919f  b3bd6139f66fbd1e  b72a1e5bbc841acb  bd199eb2a000bce2  bf57874dccbade76  bf909053a9d37796  (+6 more)
.matplotlib/: fontlist-v390.json
docs/: ICLR_ICML_CHECKLIST.md  SANITY_CHECK.md
experiments/: calibrate_from_benchmark_json.py  diagnose_tda.py  generate_results_markdown.py  json_to_csv.py  plot_driftguard_benchmark.py  run_all.py  run_driftguard_benchmark.py
notebooks/: workbench.ipynb
paper/: driftguard_preprint.md
scripts/: collect_trajectories.py  setup_mps_env.sh  visualize_trajectories.py
tests/: conftest.py  test_calibration.py  test_online_runtime.py  test_risk_scoring.py  test_steering.py  test_tda_metrics.py
(+74 files in other folders)
