[project]
name = "latent-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ndalton12", email = "niall.dalton12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.0",
    "flashlite>=0.1.0",
    "nnsight>=0.3.0",
    "numpy>=1.26,<2",
    "plotly>=6.5.2",
    "python-dotenv>=1.0.0",
    "ripser>=0.6.12",
    "safetensors>=0.5.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "transformers>=5.2.0",
    "typer>=0.15.0",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "hypothesis>=6.140.0",
    "pytest>=8.4.2",
]

[project.scripts]
latent-dynamics = "latent_dynamics.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
